--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,23 +1,26 @@
+# Use Python 3.11 slim image as the base image
 FROM python:3.11-slim
 
+# Set the working directory
 WORKDIR /app
 
-# Install system dependencies required for bcrypt compilation
+# Install system dependencies
 RUN apt-get update && apt-get install -y \
     gcc \
-    libffi-dev \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy requirements and install Python dependencies
+# Copy requirements.txt
 COPY requirements.txt .
+
+# Install Python dependencies
 RUN pip install --no-cache-dir --upgrade pip && \
     pip install --no-cache-dir -r requirements.txt
 
-# Copy the rest of the application
+# Copy the rest of the application code
 COPY . .
 
-# Expose port
-EXPOSE 7860
+# Expose port 8000
+EXPOSE 8000
 
-# Run the application
-CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "7860"]
+# Start the FastAPI application using uvicorn
+CMD ["uvicorn", "start_server_fixed:app", "--host", "0.0.0.0", "--port", "8000"]
