--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 sqlmodel==0.0.17
+sqlalchemy==2.0.23
 pydantic==2.5.0
 python-multipart==0.0.6
 better-exceptions==0.3.3
@@ -14,3 +15,4 @@ asyncpg==0.29.0
 pytz==2023.3
 uuid==1.30
 cohere==5.5.3
+aiosqlite==0.19.0
