--- a/helm/todo-chatbot-chart/values.yaml
+++ b/helm/todo-chatbot-chart/values.yaml
@@ -24,9 +24,9 @@ backend:
     type: ClusterIP
     port: 8000
   env:
-    DATABASE_URL: "postgresql://neondb_owner:npg_5GCpdS8cTXiq@ep-plain-union-ahf9h4j9-pooler.c-3.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
-    COHERE_API_KEY: "b3k0rUeT8IgerBdA44oidt57zJiYbLB7OCihQqiN"
-    SECRET_KEY: "mypassword123"
+    DATABASE_URL: "DATABASE_URL" #ap apni lagaiy ga zarror warna chly ga nhi
+    COHERE_API_KEY: "COHERE_API_KEY"
+    SECRET_KEY: "SECRET_KEY"
 
 
 resources: {}
